--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,97 @@
+* {
+  box-sizing: border-box;
+}
+
+h1 {
+  height: 50px;
+  font-size: 40px;
+  font-weight: 900;
+}
+
+h2 {
+  height: 40px;
+  font-size: 30px;
+  font-weight: 800;
+}
+
+h3 {
+  height: 30px;
+  font-size: 25px;
+  font-weight: 700;
+  
+}
+
+p {
+  height: 25px;
+  font-size: 18px;
+}
+
+input{
+  height: 26px;
+  font-size: 18px;
+  margin: 2px;
+  border: solid black 1px;
+}
+
+select{
+  height: 26px;
+  font-size: 18px;
+  margin: 2px;
+  border: solid black 1px
+}
+
+button{
+  height: 20px;
+  width: 150px;
+  font-size: 15px;
+  margin: 2px;
+  border: solid black 1px;
+  border-radius: 5px;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper{
   display: flex;
-  flex-direction: column;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.nav{
+  width: 100vw;
+  height: 50px;
+  background-color: lightgray;
+  display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+  align-items: center;
+  padding: 0px 10px 0px 10px;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.user{
+
 }
+
+.createUser{
+
+}
+
+.login {
+
+}
+
+.deleteUser{
+
+}
+
+.listItem{
+
+}
+
