--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,11 @@ button{
   border-radius: 5px;
 }
 
+a{
+  color: black;
+  text-decoration-line: none;
+}
+
 .App {
   text-align: center;
 }
@@ -63,8 +68,9 @@ button{
 }
 
 .nav{
-  width: 100vw;
+  width: 100%;
   height: 50px;
+  max-width:100%;
   background-color: lightgray;
   display: flex;
 	flex-direction: row;
@@ -92,6 +98,28 @@ button{
 }
 
 .listItem{
+  width: 340px;
+  border-bottom: solid black 1px;
+  border-top: solid black 1px;
+  margin: 5px;
+  background: #E2F2E1;
+  display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: flex-start;
+	align-items: center;
+	align-content: stretch;
+}
 
+.Item{
+
+}
+
+.timestamp{
+  font-size: 14px;
+}
+
+.itemsListPic{
+  margin: 2px 10px 2px 2px;
 }
 
