--- a/src/App.css
+++ b/src/App.css
@@ -26,13 +26,14 @@ h3 {
   height: 30px;
   font-size: 25px;
   font-weight: 700;
-  background-color: #cfcfcf
+  background-color: rgb(207, 207, 207)
 }
 
 p {
-  height: 25px;
+  min-height: 25px;
   font-size: 18px;
-  background-color: #cfcfcf;
+  margin: 1px;
+  overflow: auto;
 }
 
 input{
@@ -76,6 +77,8 @@ a{
 
 .App {
   text-align: center;
+  max-width: 100vw;
+  overflow-x: hidden; 
 }
 
 .wrapper{
@@ -86,8 +89,9 @@ a{
   align-items: center;
 }
 
+
 .nav{
-  width: 100%;
+  width: 100vw;
   height: 50px;
   max-width:100%;
   background-color: #E2F2E1;
@@ -99,15 +103,32 @@ a{
   padding: 0px 10px 0px 10px;
   border-bottom: solid #8d8c8c 1px;
   border-top: solid #8d8c8c 1px;
-  
+  position: fixed;
+}
+
+.slideNavOpen{
+  right: -0px;
+  transition: 400ms;
+  position: absolute;
+}
+
+.slideNavClosed{
+  right: -240px;
+  transition: 200ms;
+}
+
+.pageCon{
+  margin-top: 50px;
 }
 
 .user{
-
+  height: 100vh;
+  justify-content: flex-start;
 }
 
 .createUser{
-
+ height: 100vh;
+ justify-content: flex-start;
 }
 
 .login {
@@ -133,8 +154,31 @@ a{
 	align-content: stretch;
 }
 
-.Item{
+.homeStartPosition{
+  height: 100vh - 50px;
+  top: -50px;
+}
 
+.descriptionContainer{
+  /* padding: 15px; */
+  background-color: #cfcfcf;
+  box-shadow: 0 0 12px 10px #cfcfcf;
+  width: 140px;
+  height: 70px;
+  /* background: rgb(207,207,207);
+  background: radial-gradient(ellipse, rgba(207,207,207,1) 0%, rgba(207,207,207,1) 70%, rgba(226,242,225,1) 80%, rgba(226,242,225,1) 100%); */
+
+}
+
+.listItemPage{
+height: 100vh;
+justify-content: flex-start;
+
+}
+
+.Item{
+  height: 100vh;
+  justify-content: flex-start;
 }
 
 .timestamp{
@@ -142,7 +186,7 @@ a{
 }
 
 .itemsListPic{
-  margin: 2px 10px 2px 2px;
+  margin: 2px 25px 2px 2px;
   width: 150px;
   height: 100px;
 }
