--- a/src/App.css
+++ b/src/App.css
@@ -118,26 +118,20 @@ a{
 }
 
 .pageCon{
-  margin-top: 50px;
+  padding-top: 50px;
+  height: 100vh;
 }
 
 .user{
-  height: 100vh;
-  justify-content: flex-start;
 }
 
 .createUser{
- height: 100vh;
- justify-content: flex-start;
 }
 
 .login {
- height: 100vh;
- justify-content: flex-start;
 }
 
 .deleteUser{
-
 }
 
 .listItem{
@@ -160,14 +154,10 @@ a{
 }
 
 .descriptionContainer{
-  /* padding: 15px; */
   background-color: #cfcfcf;
   box-shadow: 0 0 12px 10px #cfcfcf;
   width: 140px;
   height: 70px;
-  /* background: rgb(207,207,207);
-  background: radial-gradient(ellipse, rgba(207,207,207,1) 0%, rgba(207,207,207,1) 70%, rgba(226,242,225,1) 80%, rgba(226,242,225,1) 100%); */
-
 }
 
 .listItemPage{
@@ -218,9 +208,7 @@ justify-content: flex-start;
   background-position: center;
   content: "";
   display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: fixed;
   width: 100%;
   height: 100%;
   z-index: -2;
