--- a/src/App.css
+++ b/src/App.css
@@ -83,24 +83,44 @@ a{
 
 .loadingAnimationBackground{
   position: absolute;
+  height: 100px;
+  width: 100px;  
   height: 100vh;
   width: 100vw;
   background-color: rgb(207, 207, 207, .6);
   z-index: 5;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: stretch;
 }
 
-.loadingAnimation{
-  border: 16px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 16px solid #E2F2E1;
+.loadingAnimationStick{
+  /* border: 16px solid green; */
+  background-color: brown;
   width: 120px;
   height: 120px;
-  animation: spin 2s linear infinite;
+  clip-path: polygon(42% 1%, 49% 1%, 49% 15%, 49% 22%, 48% 30%, 54% 32%, 54% 37%, 48% 39%, 39% 40%, 35% 38%, 38% 33%, 41% 31%, 41% 24%, 41% 17%, 40% 10%, 41% 4%);
+  animation: growStick 2s linear infinite;
 }
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+.loadingAnimationLeaves{
+  position: relative;
+  top: 5px;
+  background-color: green;
+  width: 120px;
+  height: 120px;
+  clip-path: polygon(30% 51%, 14% 57%, 3% 76%, 8% 90%, 20% 100%, 80% 100%, 89% 92%, 95% 79%, 85% 62%, 68% 53%, 50% 48%);
+  animation: growLeaves 1s linear infinite;
+  z-index: 6;
+}
+
+@keyframes growLeaves {
+  0% {clip-path: polygon(48% 79%, 38% 79%, 34% 84%, 33% 89%, 36% 95%, 42% 100%, 50% 100%, 57% 100%, 66% 94%, 68% 87%, 65% 81%, 56% 77%);}
+  50% { clip-path: polygon(50% 60%, 31% 61%, 20% 69%, 14% 79%, 21% 91%, 33% 100%, 50% 100%, 65% 100%, 78% 89%, 85% 75%, 78% 65%, 64% 60%); }
+  100% {clip-path: polygon(53% 50%, 29% 53%, 8% 59%, 1% 74%, 11% 91%, 29% 98%, 50% 100%, 78% 97%, 91% 90%, 100% 75%, 92% 60%, 75% 53%);}
 }
 
 .wrapper{
